# clarity

./: .gitignore  CMakeLists.txt  EXPANSION_PLAN_REPORT.txt  EXPANSION_PLAN_SUMMARY.md  PHASE_1_A_CHECKPOINT.md  composer.json  progress.json  setup.sh
.github_vst/workflows/: build.yml
Python_Training/: README.md  dataset_generator.py  feature_extractor.py  loudness_normalizer.py  run_pipeline.py
Source/: CMakeLists.txt  README.md
Source/Licensing/: ActivationClient.cpp  ActivationClient.h  HMACKeyManager.cpp  HMACKeyManager.h  HMAC_Keys.h.in
assets/css/: foundry.css
docs/bible/: 00 - Index.md  01 - Architecture & Logic.md  02 - Data Structures.md  03 - AI Strategy & Training.md  04 - UX:UI Design.md  05 - Tech Stack & Environment.md  06 - Knowledge Base.md  07 - Glossary.md  08 - Licensing Strategy.md  09 - Web Infrastructure.md  10 - aapanel Deployment & Subscription Setup.md
docs_vst/: SETUP.md
docs_vst/bible/: 00 - Index.md  11 - Graylight G-Fleet Integration.md  12 - NGN Clarity API Specifications.md
public/: index.php
src/Core/: Assets.php  Integrity.php
src/Finance/: Chancellor.php  Ledger.php
views/: cancel.php  docs.php  footer.php  header.php  home.php  purchase.php  success.php
